# gradebot

./: .env  Cargo.toml  README.md
migrations/20160710150135_create_posts_table/: up.sql
src/: lib.rs  main.rs  models.rs
templates/: cancer.hbs  hello.hbs  index.hbs  textarea.hbs
