[package]
name = "iron_test"
version = "0.1.0"
authors = ["Yifan Wang <wangyifan1995@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.31.0", optional = true }
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv_codegen = { version = "0.8.1",  optional = true }

[dependencies]
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv = "0.8.0"
dotenv_macros = { version = "0.8.0", optional = true }
iron = "^0.3.0"
handlebars-iron = "^0.15.3"
handlebars = "^0.18.0"
rustc-serialize = "^0.3.16"
env_logger = "^0.3.2"
maplit = "^0.1.3"
router = "^0.1.0"
time = "*"

[features]
default = ["nightly"]
with-syntex = ["syntex", "diesel_codegen/with-syntex", "dotenv_codegen"]
nightly = ["diesel/unstable", "diesel_codegen/nightly", "dotenv_macros"]
